@@ -1,6 +1,11 @@
 2014-10-01  Jakub Jelinek  <jakub@redhat.com>
 
 	Backported from mainline
+	2014-09-18  Vladimir Makarov  <vmakarov@redhat.com>
+
+	PR debug/63285
+	* gcc.target/i386/pr63285.c: New test.
+
 	2014-09-10  Jan Hubicka  <hubicka@ucw.cz>
 
 	PR tree-optimization/63186
